--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -543,7 +543,8 @@
     <string name="text">Tekst</string>
     <string name="migrating">Migrerer</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Administrer viste faner</string>
     <string name="default_tab_to_open">Tab to open at app start</string>
     <string name="contacts_tab">Kontakter</string>
     <string name="favorites_tab">Foretrukne</string>
