--- a/commons/src/main/res/values-eu/strings.xml
+++ b/commons/src/main/res/values-eu/strings.xml
@@ -543,7 +543,8 @@
     <string name="text">Testua</string>
     <string name="migrating">Migratzea</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Kudeatu erakutsitako fitxak</string>
     <string name="default_tab_to_open">Aplikazioa hasterakoan irekiko den fitxa</string>
     <string name="contacts_tab">Kontaktuak</string>
     <string name="favorites_tab">Gogokoak</string>
