--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -543,7 +543,8 @@
     <string name="text">Texto</string>
     <string name="migrating">Migración</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Manage shown tabs</string>
     <string name="default_tab_to_open">Lapela predeterminada ao inicio</string>
     <string name="contacts_tab">Contactos</string>
     <string name="favorites_tab">Favoritos</string>
