--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -570,7 +570,8 @@
     <string name="text">Tekst</string>
     <string name="migrating">Migracja</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Zarządzaj pokazywanymi sekcjami</string>
     <string name="default_tab_to_open">Karta otwierana przy uruchomieniu aplikacji</string>
     <string name="contacts_tab">Kontakty</string>
     <string name="favorites_tab">Ulubione</string>
