--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -543,7 +543,8 @@
     <string name="text">Texto</string>
     <string name="migrating">Migração</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Gerir separadores a mostrar</string>
     <string name="default_tab_to_open">Separador a mostrar ao iniciar</string>
     <string name="contacts_tab">Contactos</string>
     <string name="favorites_tab">Favoritos</string>
