--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -576,7 +576,8 @@
     <string name="text">Text</string>
     <string name="migrating">Migrovanie</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Spravovať zobrazené karty</string>
     <string name="default_tab_to_open">Karta otvorená po spustení apky</string>
     <string name="contacts_tab">Kontakty</string>
     <string name="favorites_tab">Obľúbené</string>
