--- a/commons/src/main/res/values-iw/strings.xml
+++ b/commons/src/main/res/values-iw/strings.xml
@@ -543,7 +543,8 @@
     <string name="text">טקסט</string>
     <string name="migrating">Migrating</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Manage shown tabs</string>
     <string name="default_tab_to_open">טאב בפתיחת האפליקצייה</string>
     <string name="contacts_tab">אנשי קשר</string>
     <string name="favorites_tab">מועדפים</string>
