--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -510,7 +510,8 @@
     <string name="text">テキスト</string>
     <string name="migrating">移行中</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">表示するタブを管理</string>
     <string name="default_tab_to_open">アプリ開始時に開くタブ</string>
     <string name="contacts_tab">連絡先</string>
     <string name="favorites_tab">お気に入り</string>
