--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -576,7 +576,8 @@
     <string name="text">Текст</string>
     <string name="migrating">Перенос</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Управление отображаемыми вкладками</string>
     <string name="default_tab_to_open">Открываемая при запуске вкладка</string>
     <string name="contacts_tab">Контакты</string>
     <string name="favorites_tab">Избранное</string>
