--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -543,7 +543,8 @@
     <string name="text">Metin</string>
     <string name="migrating">Geçiş</string>
 
-    <!-- Default tabs to open -->
+    <!-- Default tab to open -->
+    <string name="manage_shown_tabs">Gösterilen sekmeleri yönet</string>
     <string name="default_tab_to_open">Uygulama başlatıldığında açılacak sekme</string>
     <string name="contacts_tab">Kişiler</string>
     <string name="favorites_tab">Favoriler</string>
