adding some short letter strings for showing call duration

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -350,6 +350,9 @@
     <string name="minutes_raw">دقائق</string>
     <string name="hours_raw">ساعات</string>
     <string name="days_raw">أيام</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d ثانية</item>
