--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -351,6 +351,9 @@
     <string name="minutes_raw">минуте</string>
     <string name="hours_raw">сати</string>
     <string name="days_raw">дани</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d секунда</item>
