--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -348,6 +348,9 @@
     <string name="minutes_raw">分鐘</string>
     <string name="hours_raw">小時</string>
     <string name="days_raw">天</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="other">%d秒鐘</item>
