--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -352,6 +352,9 @@
     <string name="minutes_raw">minuts</string>
     <string name="hours_raw">hores</string>
     <string name="days_raw">dies</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d segon</item>
