--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -364,6 +364,9 @@
     <string name="minutes_raw">munudau</string>
     <string name="hours_raw">oriau</string>
     <string name="days_raw">dyddiau</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="zero">%d eiliadau</item>
