--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -352,6 +352,9 @@
     <string name="minutes_raw">minuutit</string>
     <string name="hours_raw">tunnit</string>
     <string name="days_raw">päivät</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d sekunti</item>
