--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -352,6 +352,9 @@
     <string name="minutes_raw">minuti</string>
     <string name="hours_raw">ore</string>
     <string name="days_raw">giorni</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d secondo</item>
