--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -347,6 +347,9 @@
     <string name="minutes_raw">分</string>
     <string name="hours_raw">時間</string>
     <string name="days_raw">日</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="other">%d秒</item>
