--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -352,6 +352,9 @@
     <string name="minutes_raw">minutės</string>
     <string name="hours_raw">valandos</string>
     <string name="days_raw">dienos</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d sekundė</item>
