--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -357,6 +357,9 @@
     <string name="minutes_raw">minúty</string>
     <string name="hours_raw">hodiny</string>
     <string name="days_raw">dni</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d sekunda</item>
