--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -352,6 +352,9 @@
     <string name="minutes_raw">хвилин</string>
     <string name="hours_raw">годин</string>
     <string name="days_raw">днів</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d секунда</item>
