--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -352,6 +352,9 @@
     <string name="minutes_raw">phút</string>
     <string name="hours_raw">giờ</string>
     <string name="days_raw">ngày</string>
+    <string name="seconds_letter">s</string>
+    <string name="minutes_letter">m</string>
+    <string name="hours_letter">h</string>
 
     <plurals name="seconds">
         <item quantity="one">%d second</item>
