--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -352,9 +352,9 @@
     <string name="minutes_raw">λεπτ.</string>
     <string name="hours_raw">ώρ.</string>
     <string name="days_raw">ημερ.</string>
-    <string name="seconds_letter">s</string>
-    <string name="minutes_letter">m</string>
-    <string name="hours_letter">h</string>
+    <string name="seconds_letter">δ</string>
+    <string name="minutes_letter">λ</string>
+    <string name="hours_letter">ω</string>
 
     <plurals name="seconds">
         <item quantity="one">%d δευτ.</item>
