--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -354,7 +354,7 @@
     <string name="days_raw">dagen</string>
     <string name="seconds_letter">s</string>
     <string name="minutes_letter">m</string>
-    <string name="hours_letter">h</string>
+    <string name="hours_letter">u</string>
 
     <plurals name="seconds">
         <item quantity="one">%d seconde</item>
