--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -548,7 +548,7 @@
 
     <!-- Default tab to open -->
     <string name="manage_shown_tabs">Gestioneu les pestanyes mostrades</string>
-    <string name="default_tab_to_open">Pestanya per obrir-la a l'inici de l'aplicació</string>
+    <string name="default_tab_to_open">Pestanya per obrir-la a l\'inici de l\'aplicació</string>
     <string name="contacts_tab">Contactes</string>
     <string name="favorites_tab">Favorits</string>
     <string name="call_history_tab">Historial de trucades</string>
