--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -554,7 +554,7 @@
     <string name="call_history_tab">Opkaldshistorik</string>
     <string name="groups_tab">Grupper</string>
     <string name="last_used_tab">Senest brugte</string>
-    <string name="files_tab">Files</string>
+    <string name="files_tab">Filer</string>
     <string name="recent_files_tab">Seneste filer</string>
 
     <!-- Recycle Bin -->
