--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -201,7 +201,7 @@
     <string name="album">Альбом</string>
     <string name="focal_length">Фокальна відстань</string>
     <string name="exposure_time">Час експозиції</string>
-    <string name="iso_speed">Швидкість ISO</string>
+    <string name="iso_speed">Світлочутливість за ISO</string>
     <string name="f_number">Діафрагмове число</string>
     <string name="camera">Камера</string>
     <string name="exif">EXIF</string>
@@ -777,7 +777,7 @@
         увімкніть режим виділення, натиснувши тривалий час на одному з елементів, потім, не відпускаючи пальця, проведіть ним по інших елементах для вибору. Третій спосіб виділити декілька елементів - тривале натиснення на одному елементі, потім тривале натиснення на іншому, і все, що розміщене між ними, буде виділене. Якщо ви
         хочете виділити всі елементи, тривалим натисненням виділіть один елемент, потім натисніть на лічильник елементів у верхньому лівому куті. Ця дія виділить або відмінить виділення всіх елементів.</string>
     <string name="faq_10_title_commons">Я придбав додаток, проте не можу завантажити його на іншому пристроєві.</string>
-    <string name="faq_10_text_commons">Спробуйте очистити кеш вашого додатка Google Play і перезапустіть ваш пристрій. Це помилка в роботі Google Play, що насправді не повязана з самим додатком.</string>
+    <string name="faq_10_text_commons">Спробуйте очистити кеш вашого додатка Google Play і перезапустіть ваш пристрій. Це помилка в роботі Google Play, що насправді не пов\'язана з самим додатком.</string>
 
     <!-- Pro comparison (shown in the deprecated free apps) -->
     <string name="why_upgrade">Отримайте Pro-версію просто зараз!</string>
